--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,6 +26,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   dbtlearn:
+    +post-hook:
+    - "GRANT SELECT ON {{ this }} TO ROLE REPORTER"
     dim:
       +materialized: table
     source:
