--- a/models/source/sources.yml
+++ b/models/source/sources.yml
@@ -6,6 +6,7 @@ sources:
     tables:
       - name: hosts
         identifier: RAW_HOSTS
+        loaded_at_field: updated_at
         freshness:
           warn_after: {count: 1, period: hour}
           error_after: {count: 24, period: hour}
@@ -20,3 +21,7 @@ sources:
       
       - name: reviews
         identifier: RAW_REVIEWS
+        loaded_at_field: date
+        freshness:
+          warn_after: {count: 1, period: hour}
+          error_after: {count: 24, period: hour}
